Fixed links to open in tabs

--- a/flexbox/growing-and-shrinking/g-a-s.html
+++ b/flexbox/growing-and-shrinking/g-a-s.html
@@ -57,7 +57,7 @@
                 </li>
             </ul>
             In many cases, when the flex shorthand is defined by one value, it only affects the property <code>flex-grow</code>. 
-            If we use the example from <a href="https://codepen.io/TheOdinProjectExamples/pen/QWgNxrp" target="_self" rel="noopener noreferrer">our previous lesson</a>, 
+            If we use the example from <a href="https://codepen.io/TheOdinProjectExamples/pen/QWgNxrp" target="_blank" rel="noopener noreferrer">our previous lesson</a>, 
             we changed our element to become a flex container. Following up from that, we also applied <code>flex: 1</code>, 
             which is actually a shorthand to write <code>flex: 1 1 0</code>.
         </p>
