Finished axes.html notes

--- a/flexbox/growing-and-shrinking/g-a-s.html
+++ b/flexbox/growing-and-shrinking/g-a-s.html
@@ -46,6 +46,7 @@
             In the diagram above, we see &lt;div&gt; is defined by <code>flex: 1</code>. This is in reality a shorthand 
             for:
             <ul>
+                <code>flex: 1 1 0</code>
                 <li>
                     <code>flex-grow: 1</code>
                 </li>
@@ -64,6 +65,7 @@
         <p>
             The default values for <code>flex</code> is:
             <ul>
+                <code>flex: 0 1 auto</code>
                 <li>
                     <code>flex-grow: 0</code>
                 </li>
