--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -15,13 +15,13 @@
                 <a href="./intro/i-t-f.html" target="_self" rel="noopener noreferrer">Introduction to Flexbox</a>
             </li>
             <li>
-                <a href="" target="_self" rel="noopener noreferrer">Growing and Shrinking</a>
+                <a href="./growing-and-shrinking/g-a-s.html" target="_self" rel="noopener noreferrer">Growing and Shrinking</a>
             </li>
             <li>
-                <a href="" target="_self" rel="noopener noreferrer">Axes</a>
+                <a href="./axes/axes.html" target="_self" rel="noopener noreferrer">Axes</a>
             </li>
             <li>
-                <a href="" target="_self" rel="noopener noreferrer">Alignment</a>
+                <a href="./alignment/alignment.html" target="_self" rel="noopener noreferrer">Alignment</a>
             </li>
         <a href="../index.html" target="_self" rel="noopener noreferrer">Back to Review Homepage</a>
     </body>
