Added group and ID symbols

--- a/css/intro-to-css/i-t-css.html
+++ b/css/intro-to-css/i-t-css.html
@@ -83,7 +83,7 @@
             </pre>
         </p>
         <p>
-            In this scenario, class selectors are designated with a period preceding the class selector.
+            In this scenario, class selectors are designated with a period (&#x2e;) preceding the class selector.
         </p>
 
         <h4>
@@ -97,7 +97,7 @@
                 <code>
                     &lt;p class="blue"&gt; This is a blue paragraph.
                         &lt;p class="blue"&gt; This is also a blue paragraph.
-                            &lt;p class="red"&gt; This is a blue paragraph.
+                            &lt;p id="red"&gt; This is a blue paragraph.
                 </code>
             </pre>
             <pre>
@@ -110,7 +110,7 @@
             </pre>
         </p>
         <p>
-            In this example, the ID selector is designated with a hashtag preceding the ID selector name.
+            In this example, the ID selector is designated with a hashtag (&#35;) preceding the ID selector name.
         </p>
 
         <h4>
