Added images fixed element positons

--- a/flexbox/growing-and-shrinking/g-a-s.html
+++ b/flexbox/growing-and-shrinking/g-a-s.html
@@ -18,13 +18,11 @@
         </ul>
 
 
-        <br>
-
-
         <h4>
             Flex Shorthand
         </h4>
-        <p>
+        <img src="./images/g-a-s-maru.gif" alt="Maru fitting in box">
+        <p>           
             When using the <code>flex</code> declaration, it is actually a shorthand for three properties that affect 
             how flex items size themselves in the flex container. The <code>flex</code> is a shorthand for:
             <ul>
