--- a/flexbox/growing-and-shrinking/g-a-s.html
+++ b/flexbox/growing-and-shrinking/g-a-s.html
@@ -309,7 +309,8 @@
                         </li>
                         <li>
                             <code>flex-basis: auto</code> means the item's starting size is based on the <code>width</code>, 
-                            the content, or default behavior.
+                            the content, or default behavior. Due to variances in browsers, the value of "auto" does not equate 
+                            to "0" necessarily.
                         </li>
                         <li>
                             Very flexible. Item grows and shrinks based on available space, and respects content size.
