Fixed link from alignment to gas

--- a/flexbox/alignment/alignment.html
+++ b/flexbox/alignment/alignment.html
@@ -170,7 +170,7 @@
                 <a href="https://developer.mozilla.org/en-US/play?id=YXvLyBkmwdcMCcNElcuPugxcj4%2Bip%2F5rore4DC9npSBCRTlFfaUwbHD9ligr3vPdivH5O4YnqrnCoHZO" target="_blank" rel="noopener noreferrer">Example</a>.
                 <li>
                     Another method of whitespace distribution is within the items instead of creating whitespace between items. 
-                    This is done through using the <code>flex</code> properties. Refer back to the <a href="../growing-and-shrinking/" target="_blank" rel="noopener noreferrer">lesson on growing and shrinking</a>.
+                    This is done through using the <code>flex</code> properties. Refer back to the <a href="../growing-and-shrinking/g-a-s.html" target="_blank" rel="noopener noreferrer">lesson on growing and shrinking</a>.
                 </li>
             </ul>
         </p>
