--- a/flexbox/growing-and-shrinking/g-a-s.html
+++ b/flexbox/growing-and-shrinking/g-a-s.html
@@ -218,7 +218,26 @@
                     An alternative is to write the entire value shorthand <code>flex: 1 1 auto</code>, the equivalent of <code>flex: auto</code>.
                 </li>
                 <li>
-                    Valid values are: <code>auto</code>, <code>em</code>, <code>%</code>, and <code>min-content</code>.
+                    Valid values are: 
+                    <ul>
+                        <li>
+                            <code>auto</code>
+                        </li>
+                        <li>
+                            <code>em</code>
+                        </li>
+                        <li>
+                            <code>%</code>
+                        </li>
+                        <li>
+                            <code>min-content</code>
+                        </li>
+                        <li>
+                            <code>min-width</code> (change to <code>min-height</code> when main axis is vertical)
+                        </li>
+                        <li>
+                            <code>max-width</code> (change to <code>max-height</code> when main axis is vertical)
+                        </li>
                 </li>
             </ul>            
         </p>
