--- a/flexbox/alignment/alignment.html
+++ b/flexbox/alignment/alignment.html
@@ -564,6 +564,28 @@
         </p>
 
 
+        <h3>
+            <a href="https://flexboxfroggy.com/" target="_blank" rel="noopener noreferrer">Flexbox Froggy</a>
+        </h3>
+        <p>
+            Flexbox Froggy is a website to practice Flexbox basics and understand how properties and values work.
+        </p>
+
+
+        <br>
+
+
+        <h3>
+            <a href="https://mastery.games/flexboxzombies/" target="_blank" rel="noopener noreferrer">Flexbox Zombies</a>
+        </h3>
+        <p>
+            Flexbox Zombies is a game to practice Flexbox declarations. Slightly more advanced than Flexbox Froggy.
+        </p>
+
+
+        <br>
+
+
         <a href="../../" target="_self" rel="noopener noreferrer">Next Lesson:</a>
         <br>
         <a href="../flexbox.html" target="_self" rel="noopener noreferrer">Back to Flexbox</a>
