--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <li>
                 <a href="./flexbox/flexbox.html" class="link" target="_self" rel="noopener noreferrer">Flexbox</a>
             </li>
+            <li>
+                <a href="./javascript/javascript.html" class="link" target="_self" rel="noopener noreferrer">JavaScript</a>
+            </li>
         </ul>
         <br>
-     </body>                
+     </body>
 </html>
